packages/astro/e2e/fixtures/errors/src/pages/preact-syntax-error.astro
---
import PreactSyntaxError from '../components/preact/PreactSyntaxError.jsx';
---

<div>
  <PreactSyntaxError />
</div>
